--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,1 +1,226 @@
-@import '../../node_modules/bootstrap/scss/bootstrap.scss';
+$font-size-root: 14px;
+
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
+
+$max-xxsmall: 365px;
+$max-xsmall: 410px;
+$max-small: 576px;
+$max-medium: 768px;
+$max-large: 992px;
+$max-xlarge: 1200px;
+$max-xxlarge: 1400px;
+
+$yellow-50: tint-color($yellow, 90%) !default;
+
+$black-900: #080808 !default;
+$header-top-bg: $black;
+$header-top-height: 35px;
+
+$header-main-height: 100px;
+
+$theme-red: #e42020;
+$theme-yellow: #ffed00;
+
+a {
+  cursor: pointer;
+}
+
+.link-icon {
+  font-size: 140%;
+}
+
+.header-top {
+  background-color: $header-top-bg;
+  height: $header-top-height;
+  border-bottom: 2px solid $theme-yellow;
+
+  &::after {
+    content: "";
+    width: 100%;
+    position: relative;
+    top: 1.5px;
+    display: block;
+    border-bottom: 2px solid $theme-red;
+  }
+
+  .container {
+    height: 100%;
+    .row {
+      height: 100%;
+      .col-auto {
+        line-height: 0;
+      }
+    }
+  }
+
+  &-link {
+    color: $white;
+    font-size: 13px;
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    text-decoration: none;
+    transition: $transition-base;
+    line-height: 0;
+
+    &:hover {
+      opacity: 0.8;
+    }
+
+    @media only screen and (max-width: $max-xxsmall) {
+      font-size: 12px;
+      gap: 4px;
+    }
+  }
+
+  &-cart {
+    color: $white;
+    font-size: 14px;
+    line-height: 0;
+    margin-left: 8px;
+    padding: 0px 8px;
+    display: inline-flex;
+    align-items: center;
+    height: $header-top-height - 2;
+    text-decoration: none;
+    transition: $transition-base;
+
+    @media only screen and (max-width: $max-xsmall) {
+      font-size: 12px;
+      margin-left: 4px;
+    }
+
+    &:hover {
+      background: $white;
+      color: $black;
+    }
+  }
+}
+
+.header-main {
+  height: $header-main-height;
+  background-color: white;
+  border-bottom: 2px solid $theme-red;
+
+  @media (max-width: $max-large) {
+    height: $header-main-height - 40;
+  }
+
+  @media (max-width: $max-xsmall) {
+    height: $header-main-height - 50;
+  }
+
+  &::after {
+    content: "";
+    width: 100%;
+    position: relative;
+    top: 1.5px;
+    display: block;
+    border-bottom: 2px solid $theme-yellow;
+  }
+
+  .container {
+    height: 100%;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 24px;
+  }
+
+  .header-logo {
+    height: 100%;
+    display: inline-flex;
+    align-items: center;
+    gap: 12px;
+    img {
+      height: 100%;
+    }
+    .mobile-menu-icon {
+      display: none;
+      @media (max-width: $max-large) {
+        display: block;
+      }
+    }
+  }
+}
+
+.header-navidation {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 32px;
+  width: 100%;
+
+  li {
+    a {
+      text-decoration: none;
+      color: $black-900;
+      font-size: 14px;
+    }
+
+    &.search-box {
+      max-width: 270px;
+    }
+  }
+
+  @media (max-width: $max-large) {
+    display: none;
+  }
+}
+
+.search-box {
+  border: 2px solid $black;
+  background-color: $yellow-50;
+  padding: 0 12px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 38px;
+  width: 100%;
+
+  &-rounded {
+    border-radius: 50px;
+  }
+  input {
+    color: $black-900;
+    font-size: 12px;
+    width: 100%;
+    border: 0;
+    background: transparent;
+    outline: none;
+  }
+  .btn-search {
+    display: flex;
+    align-items: center;
+    padding: 0;
+  }
+}
+
+.header-contact-section {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  height: 100%;
+  font-size: 14px;
+  img {
+    height: 100%;
+    max-height: 55px;
+  }
+  @media (max-width: $max-small) {
+    gap: 8px;
+    img {
+      display: none;
+    }
+  }
+  @media (max-width: $max-xsmall) {
+    font-size: 12px;
+  }
+  @media (max-width: $max-xxsmall) {
+    font-size: 10px;
+  }
+}
