--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -508,6 +508,7 @@ p {
 }
 
 .section-footer {
+  background-color: #f2f2f2;
   padding: 50px 0;
   .row {
     --bs-gutter-x: 50px;
@@ -525,8 +526,10 @@ p {
       }
     }
     .footer-media-icons {
-      display: flex;
-      gap: 10px;
+      max-width: 300px;
+      img {
+        width: 100%;
+      }
     }
   }
   .footer-links {
@@ -542,6 +545,7 @@ p {
     }
   }
   .footer-call {
+    min-width: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
