--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -512,9 +512,14 @@ p {
 .section-footer {
   background-color: #f2f2f2;
   padding: 50px 0;
+
   .row {
-    --bs-gutter-x: 50px;
     --bs-gutter-y: 30px;
+  }
+  @media screen and (min-width: $max-small) {
+    .row {
+      --bs-gutter-x: 50px;
+    }
   }
   .footer-terms-policy {
     a {
