--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -266,9 +266,33 @@ p {
 
 .hero-section {
   background: $hero-bg;
-  min-height: 615px;
-  display: flex;
-  align-items: center;
+
+  .hero-section-content {
+    display: flex;
+    align-items: center;
+
+    .hero-section-slider {
+      flex: 1;
+
+      img {
+        width: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
+    }
+    .hero-section-details {
+      min-width: 330px;
+      max-width: 330px;
+      padding-right: 40px;
+      padding-top: 40px;
+      padding-bottom: 40px;
+
+      h1 {
+        color: $white;
+        font-size: 54px;
+      }
+    }
+  }
 }
 
 .gift-section {
@@ -567,18 +591,4 @@ p {
   //     color: #fff;
   //   }
   // }
-}
-
-.hero-section-content {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .hero-section-details {
-    width: 100%;
-    max-width: 23%;
-    h1 {
-      color: $white;
-      font-size: 54px;
-    }
-  }
 }
