--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -581,6 +581,12 @@ p {
         width: 100%;
       }
     }
+    @media screen and (max-width: $max-small) {
+      .footer-media-icons {
+        text-align: center;
+        display: inline-block;
+      }
+    }
   }
   .footer-links {
     padding-left: 0px;
