--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -40,7 +40,7 @@ p {
 }
 
 .section-title {
-  font-size: 36px;
+  font-size: 32px;
   font-weight: 600;
 }
 
@@ -357,6 +357,15 @@ p {
   }
 }
 
+.product-details {
+  padding-top: 12px;
+  font-size: 16px;
+  line-height: 1.6;
+
+  .product-price {
+    font-weight: 600;
+  }
+}
 .product-card {
   border: 2px solid $black;
   .product-img-wrapper {
@@ -375,11 +384,8 @@ p {
     text-align: center;
     background-color: $yellow-50;
     padding: 12px;
-    font-size: 16px;
-    line-height: 1.6;
 
     .product-price {
-      font-size: 18px;
       font-weight: 600;
     }
   }
@@ -616,4 +622,23 @@ p {
   //     color: #fff;
   //   }
   // }
+}
+.category-breadcrumb {
+  font-weight: 600;
+}
+.breadcrumb-item {
+  --bs-breadcrumb-item-active-color: $black;
+  &.active {
+    --bs-breadcrumb-item-active-color: $black;
+  }
+  a {
+    color: $danger;
+    text-decoration: none;
+  }
+}
+
+.section-catergory-grid {
+  .row {
+    --bs-gutter-y: 1.5rem;
+  }
 }
