--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,6 +1,7 @@
 $font-size-root: 14px;
 $danger: #e42020;
 $warning: #ffed00;
+$primary: #4776cb;
 $thumbnail-border-color: #000;
 $thumbnail-border-radius: 0;
 $thumbnail-padding: 0;
@@ -29,6 +30,13 @@ $hero-bg: linear-gradient(#89bdeb, #001050);
 
 a {
   cursor: pointer;
+}
+
+.gx-sm {
+  --bs-gutter-x: 8px;
+}
+.gy-sm {
+  --bs-gutter-y: 8px;
 }
 
 p {
@@ -623,11 +631,8 @@ p {
   //   }
   // }
 }
-.category-breadcrumb {
-  font-weight: 600;
-}
 .breadcrumb-item {
-  --bs-breadcrumb-item-active-color: $black;
+  --bs-breadcrumb-item-color: $black;
   &.active {
     --bs-breadcrumb-item-active-color: $black;
   }
@@ -636,9 +641,83 @@ p {
     text-decoration: none;
   }
 }
+.category-breadcrumb {
+  font-weight: 600;
+}
+.filter-breadcrumb {
+  .breadcrumb-item {
+    &.active {
+      --bs-breadcrumb-item-active-color: $black;
+    }
+    a {
+      color: #878788;
+    }
+  }
+}
 
 .section-catergory-grid {
   .row {
     --bs-gutter-y: 1.5rem;
+  }
+}
+
+.main-pagination {
+  list-style: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  .pagination-item {
+    a {
+      transition: $transition-base;
+      cursor: pointer;
+      text-decoration: none;
+      display: flex;
+      aspect-ratio: 1/1;
+      padding: 5px 5px;
+      width: 40px;
+      align-items: center;
+      justify-content: center;
+      font-size: 16px;
+      color: #000;
+    }
+    &:hover a,
+    &.active a {
+      background: $primary;
+      color: $white;
+    }
+  }
+}
+
+.filter-section {
+  font-size: 16px;
+  color: #000;
+  row-gap: 8px;
+}
+
+.filter-section-sorting {
+  width: 180px;
+  padding-left: 3px;
+  padding-right: 3px;
+  border: 0;
+  border-bottom: 2px solid $gray-500;
+  border-radius: 0;
+
+  &:focus {
+    box-shadow: 0 0 0 transparent;
+    border-bottom-color: $gray-900;
+  }
+}
+.filter-button {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  text-decoration: none;
+  font-size: 16px;
+  color: #000;
+  &-icon {
+    width: 1.6em;
   }
 }
