--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -721,3 +721,65 @@ p {
     width: 1.6em;
   }
 }
+
+.section-pack {
+  padding-top: 50px;
+  .pack-image {
+    max-width: 500px;
+    position: relative;
+    img {
+      width: 100%;
+    }
+    img.pack-img-bg {
+      top: 0;
+      left: 0;
+      position: absolute;
+      z-index: -1;
+    }
+  }
+  .pack-details {
+    h2 {
+      font-size: 40px;
+      font-weight: 700;
+    }
+    h6 {
+      font-size: 20px;
+      font-weight: 700;
+    }
+    p {
+      font-weight: 500;
+    }
+  }
+}
+
+.section-description {
+  margin: 0 auto;
+  margin: 50px 0;
+  h2 {
+    position: relative;
+  }
+  h2::after {
+    position: absolute;
+    left: 0;
+    top: -10px;
+    width: 100%;
+    height: 1px;
+    background-color: #000;
+    content: "";
+  }
+  h2::before {
+    position: absolute;
+    left: 50%;
+    top: -10px;
+    width: 100px;
+    height: 1px;
+    background-color: red;
+    content: "";
+  }
+  p {
+    width: 100%;
+    max-width: 800px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
