--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -13,8 +13,8 @@ $max-xxsmall: 365px;
 $max-xsmall: 410px;
 $max-small: 576px;
 $max-medium: 768px;
-$max-large: 992px;
-$min-large: 991px;
+$max-large: 991px;
+$min-large: 992px;
 $max-xlarge: 1200px;
 $max-xxlarge: 1400px;
 
@@ -865,4 +865,70 @@ p {
   left: 0 !important;
   height: 100% !important;
   width: 100% !important;
+}
+
+@media (min-width: $min-large) {
+  .mobile-menu-overlay,
+  .header-mobile {
+    display: none;
+  }
+}
+
+@media (max-width: $max-large) {
+  .mobile-menu-overlay {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: -10;
+    pointer-events: none;
+    opacity: 0;
+    transition: $transition-base;
+  }
+  .header-mobile {
+    width: 280px;
+    background-color: $gray-100;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 11;
+    left: -280px;
+    transition: $transition-base;
+
+    .header-mobile-menu {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      li {
+        padding: 10px 24px;
+        font-size: 16px;
+        border-bottom: 1px solid $gray-500;
+        a {
+          color: $black-900;
+          text-decoration: none;
+        }
+        &:hover {
+          background-color: $gray-300;
+        }
+      }
+    }
+  }
+  .menu-open {
+    .header-mobile {
+      left: 0;
+    }
+    .mobile-menu-overlay {
+      z-index: 10;
+      pointer-events: all;
+      opacity: 1;
+    }
+  }
 }
