--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -891,6 +891,8 @@ p {
     transition: $transition-base;
   }
   .header-mobile {
+    pointer-events: none;
+    opacity: 0;
     width: 280px;
     background-color: $gray-100;
     height: 100%;
@@ -923,7 +925,9 @@ p {
   }
   .menu-open {
     .header-mobile {
+      opacity: 1;
       left: 0;
+      pointer-events: all;
     }
     .mobile-menu-overlay {
       z-index: 10;
