--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -941,11 +941,15 @@ p {
   padding: 18px 24px;
   border-bottom: 1px solid $gray-500;
   display: flex;
+  width: 100%;
+  overflow: hidden;
 
   input {
+    width: 100%;
     border: 0;
     background-color: transparent;
     font-size: 18px;
+    padding: 0;
     &:focus {
       outline: none;
     }
@@ -957,6 +961,7 @@ p {
     line-height: 0;
     opacity: 0.8;
     transition: $transition-base;
+    padding: 0;
 
     &:hover {
       opacity: 1;
