--- a/assets/scss/styles.css
+++ b/assets/scss/styles.css
@@ -12872,6 +12872,7 @@ p {
   opacity: 0.8;
   transition: all 0.2s ease-in-out;
   padding: 0;
+  color: #080808;
 }
 .menu-searchbar button:hover {
   opacity: 1;
