--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -962,6 +962,7 @@ p {
     opacity: 0.8;
     transition: $transition-base;
     padding: 0;
+    color: $black-900;
 
     &:hover {
       opacity: 1;
