--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -6,6 +6,10 @@ $thumbnail-border-color: #000;
 $thumbnail-border-radius: 0;
 $thumbnail-padding: 0;
 $thumbnail-border-width: 2px;
+$accordion-button-active-bg: transparent;
+$accordion-button-active-color: inherit;
+$form-check-input-width: 1.2em;
+$accordion-border-width: 0;
 
 @import "../../plugins/bootstrap/scss/bootstrap.scss";
 
@@ -24,12 +28,20 @@ $black-900: #080808 !default;
 $header-top-bg: $black;
 $header-top-height: 35px;
 
+$sider-width: 280px;
+
 $header-main-height: 100px;
 
 $hero-bg: linear-gradient(#89bdeb, #001050);
 
 a {
   cursor: pointer;
+
+  &:has(.product-card) {
+    color: inherit;
+    text-decoration: none;
+    display: block;
+  }
 }
 
 input::-webkit-outer-spin-button,
@@ -79,6 +91,11 @@ p {
   border-radius: 100px;
   padding: 2px 10px;
   transition: $transition-base;
+  text-decoration: none;
+  display: inline-flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 
   &:hover {
     background-color: $warning;
@@ -192,6 +209,10 @@ p {
     display: inline-flex;
     align-items: center;
     gap: 12px;
+    a {
+      display: inline-block;
+      height: 100%;
+    }
     img {
       height: 100%;
     }
@@ -873,34 +894,33 @@ p {
     display: none;
   }
 }
-
+.mobile-menu-overlay {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: -10;
+  pointer-events: none;
+  opacity: 0;
+  transition: $transition-base;
+}
 @media (max-width: $max-large) {
-  .mobile-menu-overlay {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index: -10;
-    pointer-events: none;
-    opacity: 0;
-    transition: $transition-base;
-  }
   .header-mobile {
     pointer-events: none;
     opacity: 0;
-    width: 280px;
+    width: $sider-width;
     background-color: $gray-100;
     height: 100%;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 11;
-    left: -280px;
+    left: $sider-width * -1;
     transition: $transition-base;
 
     .header-mobile-menu {
@@ -970,8 +990,48 @@ p {
   }
 }
 
-.side-bar {
-  width: 350px;
-  background-color: #fff;
-  height: 100vh;
+.category-filter-sider {
+  pointer-events: none;
+  opacity: 0;
+  width: $sider-width;
+  background-color: $gray-100;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 11;
+  left: $sider-width * -1;
+  transition: $transition-base;
+}
+
+.category-filter-open {
+  .category-filter-sider {
+    opacity: 1;
+    left: 0;
+    pointer-events: all;
+  }
+  .mobile-menu-overlay {
+    z-index: 10;
+    pointer-events: all;
+    opacity: 1;
+  }
+}
+
+.filter-links {
+  text-decoration: none;
+  font-size: 16px;
+  color: $black-900;
+
+  &.active {
+    font-weight: bold;
+  }
+}
+
+.filter-item-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  .filter-items {
+    font-size: 16px;
+  }
 }
